; ModuleID = '/home/carl/AnghaBench/sway/sway/desktop/extr_idle_inhibit_v1.c_handle_idle_inhibitor_v1.c'
source_filename = "/home/carl/AnghaBench/sway/sway/desktop/extr_idle_inhibit_v1.c_handle_idle_inhibitor_v1.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_idle_inhibit_manager_v1 = type { i32 }
%struct.wl_listener = type { i32 }
%struct.wlr_idle_inhibitor_v1 = type { %struct.TYPE_3__, i32 }
%struct.TYPE_3__ = type { i32 }
%struct.sway_idle_inhibitor_v1 = type { %struct.TYPE_4__, i32, i32, i32, %struct.sway_idle_inhibit_manager_v1* }
%struct.TYPE_4__ = type { i32 }

@new_idle_inhibitor_v1 = common dso_local global i32 0, align 4
@SWAY_DEBUG = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"New sway idle inhibitor\00", align 1
@INHIBIT_IDLE_APPLICATION = common dso_local global i32 0, align 4
@handle_destroy = common dso_local global i32 0, align 4
@manager = common dso_local global %struct.sway_idle_inhibit_manager_v1* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @handle_idle_inhibitor_v1(%struct.wl_listener* %0, i8* %1) #0 {
  %3 = alloca %struct.wl_listener*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.wlr_idle_inhibitor_v1*, align 8
  %6 = alloca %struct.sway_idle_inhibit_manager_v1*, align 8
  %7 = alloca %struct.sway_idle_inhibitor_v1*, align 8
  store %struct.wl_listener* %0, %struct.wl_listener** %3, align 8
  store i8* %1, i8** %4, align 8
  %8 = load i8*, i8** %4, align 8
  %9 = bitcast i8* %8 to %struct.wlr_idle_inhibitor_v1*
  store %struct.wlr_idle_inhibitor_v1* %9, %struct.wlr_idle_inhibitor_v1** %5, align 8
  %10 = load %struct.wl_listener*, %struct.wl_listener** %3, align 8
  %11 = load %struct.sway_idle_inhibit_manager_v1*, %struct.sway_idle_inhibit_manager_v1** %6, align 8
  %12 = ptrtoint %struct.sway_idle_inhibit_manager_v1* %11 to i32
  %13 = load i32, i32* @new_idle_inhibitor_v1, align 4
  %14 = call %struct.sway_idle_inhibit_manager_v1* @wl_container_of(%struct.wl_listener* %10, i32 %12, i32 %13)
  store %struct.sway_idle_inhibit_manager_v1* %14, %struct.sway_idle_inhibit_manager_v1** %6, align 8
  %15 = load i32, i32* @SWAY_DEBUG, align 4
  %16 = call i32 @sway_log(i32 %15, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0))
  %17 = call %struct.sway_idle_inhibitor_v1* @calloc(i32 1, i32 24)
  store %struct.sway_idle_inhibitor_v1* %17, %struct.sway_idle_inhibitor_v1** %7, align 8
  %18 = load %struct.sway_idle_inhibitor_v1*, %struct.sway_idle_inhibitor_v1** %7, align 8
  %19 = icmp ne %struct.sway_idle_inhibitor_v1* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %2
  br label %51

21:                                               ; preds = %2
  %22 = load %struct.sway_idle_inhibit_manager_v1*, %struct.sway_idle_inhibit_manager_v1** %6, align 8
  %23 = load %struct.sway_idle_inhibitor_v1*, %struct.sway_idle_inhibitor_v1** %7, align 8
  %24 = getelementptr inbounds %struct.sway_idle_inhibitor_v1, %struct.sway_idle_inhibitor_v1* %23, i32 0, i32 4
  store %struct.sway_idle_inhibit_manager_v1* %22, %struct.sway_idle_inhibit_manager_v1** %24, align 8
  %25 = load i32, i32* @INHIBIT_IDLE_APPLICATION, align 4
  %26 = load %struct.sway_idle_inhibitor_v1*, %struct.sway_idle_inhibitor_v1** %7, align 8
  %27 = getelementptr inbounds %struct.sway_idle_inhibitor_v1, %struct.sway_idle_inhibitor_v1* %26, i32 0, i32 3
  store i32 %25, i32* %27, align 4
  %28 = load %struct.wlr_idle_inhibitor_v1*, %struct.wlr_idle_inhibitor_v1** %5, align 8
  %29 = getelementptr inbounds %struct.wlr_idle_inhibitor_v1, %struct.wlr_idle_inhibitor_v1* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = call i32 @view_from_wlr_surface(i32 %30)
  %32 = load %struct.sway_idle_inhibitor_v1*, %struct.sway_idle_inhibitor_v1** %7, align 8
  %33 = getelementptr inbounds %struct.sway_idle_inhibitor_v1, %struct.sway_idle_inhibitor_v1* %32, i32 0, i32 2
  store i32 %31, i32* %33, align 8
  %34 = load %struct.sway_idle_inhibit_manager_v1*, %struct.sway_idle_inhibit_manager_v1** %6, align 8
  %35 = getelementptr inbounds %struct.sway_idle_inhibit_manager_v1, %struct.sway_idle_inhibit_manager_v1* %34, i32 0, i32 0
  %36 = load %struct.sway_idle_inhibitor_v1*, %struct.sway_idle_inhibitor_v1** %7, align 8
  %37 = getelementptr inbounds %struct.sway_idle_inhibitor_v1, %struct.sway_idle_inhibitor_v1* %36, i32 0, i32 1
  %38 = call i32 @wl_list_insert(i32* %35, i32* %37)
  %39 = load i32, i32* @handle_destroy, align 4
  %40 = load %struct.sway_idle_inhibitor_v1*, %struct.sway_idle_inhibitor_v1** %7, align 8
  %41 = getelementptr inbounds %struct.sway_idle_inhibitor_v1, %struct.sway_idle_inhibitor_v1* %40, i32 0, i32 0
  %42 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %41, i32 0, i32 0
  store i32 %39, i32* %42, align 8
  %43 = load %struct.wlr_idle_inhibitor_v1*, %struct.wlr_idle_inhibitor_v1** %5, align 8
  %44 = getelementptr inbounds %struct.wlr_idle_inhibitor_v1, %struct.wlr_idle_inhibitor_v1* %43, i32 0, i32 0
  %45 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %44, i32 0, i32 0
  %46 = load %struct.sway_idle_inhibitor_v1*, %struct.sway_idle_inhibitor_v1** %7, align 8
  %47 = getelementptr inbounds %struct.sway_idle_inhibitor_v1, %struct.sway_idle_inhibitor_v1* %46, i32 0, i32 0
  %48 = call i32 @wl_signal_add(i32* %45, %struct.TYPE_4__* %47)
  %49 = load %struct.sway_idle_inhibit_manager_v1*, %struct.sway_idle_inhibit_manager_v1** %6, align 8
  %50 = call i32 @sway_idle_inhibit_v1_check_active(%struct.sway_idle_inhibit_manager_v1* %49)
  br label %51

51:                                               ; preds = %21, %20
  ret void
}

declare dso_local %struct.sway_idle_inhibit_manager_v1* @wl_container_of(%struct.wl_listener*, i32, i32) #1

declare dso_local i32 @sway_log(i32, i8*) #1

declare dso_local %struct.sway_idle_inhibitor_v1* @calloc(i32, i32) #1

declare dso_local i32 @view_from_wlr_surface(i32) #1

declare dso_local i32 @wl_list_insert(i32*, i32*) #1

declare dso_local i32 @wl_signal_add(i32*, %struct.TYPE_4__*) #1

declare dso_local i32 @sway_idle_inhibit_v1_check_active(%struct.sway_idle_inhibit_manager_v1*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
